<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/tv_text"
          android:text="@string/et_phone"/>

        <EditText
            android:id="@+id/et_phone"
            style="@style/login_et_text"
            android:inputType="number"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/w100"
            android:hint="@string/et_writephone"/>
    </LinearLayout>

   <View 
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:background="@color/et_line"
       android:layout_marginTop="@dimen/h30"
       android:layout_marginBottom="@dimen/h30"
       android:layout_gravity="center"
       />
   <RelativeLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:orientation="horizontal"
       >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/tv_text"
           android:text="@string/et_authcode"/>

        <EditText 
       android:id="@+id/et_code"
       style="@style/login_et_text"
       android:layout_marginLeft="@dimen/w220"
       android:layout_alignParentLeft="true"

       android:hint="@string/et_writeverify"
       />

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:gravity="center"
           android:orientation="horizontal">
           <View
               android:layout_width="1dp"
               android:layout_height="@dimen/h60"
               android:alpha="0.5"
               android:background="#979797">
           </View>
           <TextView
               android:id="@+id/tv_code"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="获取验证码"
               android:textSize="@dimen/tv_twenty_eight"
               android:layout_marginLeft="@dimen/h50"
               android:textColor="@color/tv_login"
               />
       </LinearLayout>

   </RelativeLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/btn_select"
        android:layout_marginTop="@dimen/h200"
        android:layout_gravity="center"
        android:text="@string/btn_reset"
        />

</LinearLayout>
