<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/set_dialog_bg"
    android:orientation="vertical">
   <include
       layout="@layout/include_login"></include>
  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_gravity="center"
      android:background="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/et_text"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/tv_login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/tv_twenty_eight"
         android:textColor="@color/line"
         android:text="@string/tv_versions"/>
        <TextView
            android:id="@+id/tv_versions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tv_twenty_eight"
            android:textColor="@color/line"
            android:text="Ver 1.0.1"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="400dp"
        style="@style/btn_sunmit"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/btn_versions"/>
</LinearLayout>
